--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-is": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
